# ubiquity-python-mlclient

./: README.md  setup.cfg
Ubiquity/: Ubiquity.py
Ubiquity.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
