[metadata]
name = ubiquity
version = ${version}
author = Idaaas
author_email = support@ubiquity.ai
description = A brief description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/idaaas/Ubiquity-python-mlclient
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Ubuntu

[options]
packages = find:
python_requires = >=3.5

[options.packages.find]
where = ubiquity
